# libsemantic

./: README.md
semantic/: CMakeLists.txt  featurelayers.cpp  featurelayers.hpp  gpkg.cpp  gpkg.hpp  io.cpp  io.hpp  mesh.cpp  mesh.hpp  ogr.hpp  roof.cpp  roof.hpp  tree.cpp  tree.hpp  world.cpp  world.hpp
semantic/data/: semantic.mtl
semantic/gpkg/: config.hpp
semantic/mesh/: block.cpp  block.hpp  building.hpp  circular.cpp  detail.hpp  lamp.cpp  lamp.hpp  manhole.cpp  manhole.hpp  mesh.cpp  mesh.incl.hpp  multipolymesh.cpp  multipolymesh.hpp  pedestrian-crossing.cpp  pedestrian-crossing.hpp  pole.cpp  pole.hpp  road-arrow.cpp  road-arrow.hpp  road-features.cpp  road-features.hpp  roof.hpp  tree.cpp  tree.hpp
semantic/mesh/roof/: circular.cpp  mesh-repair.cpp  rectangular.cpp
semantic/ogr/: building.hpp  lamp.cpp  lamp.hpp  manhole.cpp  manhole.hpp  ogr.cpp  ogr.incl.hpp  pole.cpp  pole.hpp  roof.hpp  tree.cpp  tree.hpp
semantic/ogr/roof/: circular.cpp  rectangular.cpp
semantic/python/: CMakeLists.txt  semanticmodule.cpp  semanticmodule.hpp
semantic/tools/: CMakeLists.txt  gpkg2semantic.cpp  semantic2gpkg.cpp  semantic2obj.cpp  semantic2semantic.cpp  semantic2vef.cpp
semantic/tools/data/: semantic.mtl
